# main.go
@@ -9,13 +9,14 @@ import (
 	"gin/model"
 	"time"
 
+	"fmt"
+	"gin/utils"
+
 	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 	"golang.org/x/time/rate"
-	"gin/utils"
-	"fmt"
 )
 
 func RateLimitMiddleware(rps rate.Limit, burst int) gin.HandlerFunc {
@@ -63,9 +64,9 @@ func main() {
 	// 自动迁移数据库结构
 	db.DB.AutoMigrate(&model.User{})
 	if err := utils.InitRSAKeys(); err != nil {
-        fmt.Printf("错误: %v\n", err)
-        return
-    }
+		fmt.Printf("错误: %v\n", err)
+		return
+	}
 
 	public.Use(cors.New(cors.Config{
 		AllowOrigins:     []string{"*"}, // 建议生产配置具体域名
@@ -116,11 +117,12 @@ func main() {
 	// public.POST("/api/server-status", handler.GetServerStatusHandler)      // 获取服务器运行状态路由(POST)
 	// public.POST("/api/download-pictures", handler.DownloadPicturesHandler) // 通用图片下载路由
 	// public.POST("/api/proxy-html", handler.ProxyHTMLHandler)               // 代理HTML访问路由
-	public.POST("/api/register", handler.RegisterHandler)      // 用户注册路由
-	public.POST("/api/login", handler.LoginHandler)            // 用户登录路由（第一步）
-	public.POST("/api/login/step2", handler.LoginStep2Handler) // 用户登录路由（第二步）
-	public.POST("/api/reset-password", handler.ChangePasswordHandler) // 用户重置密码路由
-	public.POST("/api/reset-email", handler.ResetEmailHandler) // 发送修改邮箱路由
+	public.POST("/api/register", handler.RegisterHandler)                                  // 用户注册路由
+	public.POST("/api/login", handler.LoginHandler)                                        // 用户登录路由（第一步）
+	public.POST("/api/login/step2", handler.LoginStep2Handler)                             // 用户登录路由（第二步）
+	public.POST("/api/reset-password", handler.ChangePasswordHandler)                      // 用户重置密码路由
+	public.POST("/api/reset-email", handler.ResetEmailHandler)
+	public.POST("/api/llm-message/deepseek", handler.SendMessageToLLMStreamHandler) // 流式传输 DeepSeek 消息
 
 	// Swagger 文档路由
 	public.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
